Attempt to fix positioning on mobile

--- a/projects/podcast/player/style.css
+++ b/projects/podcast/player/style.css
@@ -22,7 +22,7 @@ body {
 .episode-list {
     overflow: auto;
     padding: 20px 50px 0px 30px;
-    height: 83%;
+    height: 80%;
     top: 0;
     width: 420px;
     position: fixed;
@@ -36,7 +36,7 @@ body {
     width: 400px;
     position: fixed;
     bottom: 0;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     z-index: 10;
     height: 14%;
 }
